# ghost-protocol

./: .env.example  .gitignore  .mcp.json  Procfile  README.md  feedback.md  syntaqlite.toml
backend/: pyproject.toml
backend/src/ghost_protocol_daemon/: config.py  contracts.py  db.py  events.py  server.py  store.py  telegram_bridge.py  terminal_sessions.py
backend/src/hermes_desktop_daemon/: config.py  contracts.py  db.py  runtime.py  server.py  store.py  telegram_bridge.py
cli/: Cargo.toml
cli/src/: chat.rs  commands.rs  configure.rs  detect.rs  init.rs  main.rs  setup.rs
daemon/: Cargo.toml
daemon/migrations/: 001_initial.sql  002_known_hosts.sql  003_peer_permissions.sql  004_discovered_peers.sql  005_outcome_log.sql  006_projects_and_chat.sql  007_session_delegation.sql  007_session_metadata.sql  008_session_delegation.sql  008_supervisor_core.sql  009_code_server.sql  011_intelligence.sql
daemon/sql/: README.md
daemon/sql/store/hosts/: get_known_host.sql  insert_known_host.sql  list_known_hosts.sql  remove_known_host.sql  update_host_status.sql
daemon/src/: cli.rs  config.rs  lib.rs  main.rs  server.rs  workdir.rs
daemon/src/chat/: broadcaster.rs  manager.rs  mod.rs
daemon/src/chat/adapters/: claude.rs  generic.rs  mod.rs  ollama.rs
daemon/src/code_server/: lifecycle.rs  mod.rs
daemon/src/hardware/: agents.rs  cpu.rs  gpu.rs  mod.rs  processes.rs  ram.rs
daemon/src/host/: detect.rs  logs.rs  mod.rs
daemon/src/intelligence/: backfill.rs  config.rs  enricher.rs  memory.rs  mod.rs  processor.rs  provider.rs  retrieval.rs
daemon/src/mcp/: mod.rs  resources.rs  transport.rs
daemon/src/middleware/: cors.rs  mod.rs  permissions.rs  tailscale.rs
daemon/src/store/: chat.rs  chunks.rs  delegations.rs  discoveries.rs  hosts.rs  mod.rs  outcomes.rs  permissions.rs  projects.rs  sessions.rs  skills.rs
daemon/src/supervisor/: mod.rs
daemon/src/terminal/: broadcaster.rs  manager.rs  mod.rs  session.rs  tmux.rs
daemon/src/transport/: http.rs  ws.rs
daemon/tests/: agent_context_injection.rs  ghost_tools_proxy.rs  intelligence_integration.rs  managed_claude_restriction.rs  terminal_lifecycle.rs
data/: hermes_desktop.db
desktop/: .gitignore  README.md  index.html  package-lock.json  package.json  vite.config.pwa.ts
docs/: architecture.md  implementation-notes.md  project-plan.md  remote-sessions.md  runbook.md  vision.md
notes/: context.md
(+78 files in other folders)
